# turboagents

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.local.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
docs/: adapters.md  architecture.md  attribution.md  benchmarks.md  cli.md  deployment.md  examples.md  getting-started.md  implementation-notes.md  implemented.md  index.md  status.md  surrealdb.md
docs/assets/: extra.css  extra.js
examples/: bench_profiles.py  chroma_turborag.py  faiss_turborag.py  mlx_server_dry_run.py  quickstart.py
scripts/: benchmark_mlx.py  benchmark_needle.py  benchmark_rag_adapters.py  run_benchmark_matrix.py  summarize_benchmark_results.py
tests/: test_bench.py  test_config.py  test_datasets.py  test_engines.py  test_hadamard.py  test_needle.py  test_pipeline.py  test_polar.py  test_proxy.py  test_qjl.py  test_rag.py  test_serve.py  test_types.py
turboagents/: __init__.py
turboagents/bench/: __init__.py  datasets.py  kv.py  needle.py  paper.py  rag.py  report.py
turboagents/cli/: bench.py  compress.py  doctor.py  main.py  serve.py
turboagents/engines/: __init__.py  base.py  llamacpp.py  mlx.py  vllm.py  vllm_plugin.py
turboagents/proxy/: __init__.py  dashboard.py  server.py
turboagents/quant/: __init__.py  codebooks.py  config.py  context.py  hadamard.py  pipeline.py  polar.py  qjl.py  types.py
turboagents/rag/: __init__.py  base.py  chroma.py  faiss.py  lancedb.py  pgvector.py  surrealdb.py
